# tracing-subscriber-sqlite

./: .gitignore  Cargo.toml  LICENSE  README.md
schema/: log.sql
src/: db.rs  lib.rs
