[package]
name = "tracing-subscriber-sqlite"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/ProjectAnni/tracing-subscriber-sqlite"
repository = "https://github.com/ProjectAnni/tracing-subscriber-sqlite"
license = "MIT"
authors = ["snylonue <snylonue@gmail.com>"]
description = "A tracing Subscriber to send log to sqlite database."

[dependencies]
rusqlite = { version = "0.30", features = ["bundled", "time"] }
serde_json = "1.0.122"
time = "0.3.36"
tracing = "0.1.40"
tracing-log = { version = "0.2.0", optional = true, default-features = false }

[features]
tracing-log = ["dep:tracing-log"]
